Moved daily_t to header, moved assertions to test case

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required (VERSION 3.5)
 
 add_executable(
-   foo
-   foo.cpp
+   events-demo
    main.cpp
 )
 
 target_link_libraries(
-   foo
+   events-demo
 )
 
