Added yearly_t support, fixed corner cases in other rules, refactored tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,14 +1,18 @@
 cmake_minimum_required (VERSION 3.5)
 
-add_executable(
-   basic_test
-   main.cpp
-   basic_test.cpp
-)
+add_executable(daily_test main.cpp daily_test.cpp)
+target_link_libraries(daily_test gtest)
 
-target_link_libraries(
-   basic_test
-   gtest
-)
+add_executable(weekly_test main.cpp weekly_test.cpp)
+target_link_libraries(weekly_test gtest)
 
-add_test(basicTest basic_test)
+add_executable(monthly_test main.cpp monthly_test.cpp)
+target_link_libraries(monthly_test gtest)
+
+add_executable(yearly_test main.cpp yearly_test.cpp)
+target_link_libraries(yearly_test gtest)
+
+add_test(dailyTest daily_test)
+add_test(weeklyTest weekly_test)
+add_test(monthlyTest monthly_test)
+add_test(yearlyTest yearly_test)
